--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <div id="info">
         <div id="name"></div>
     </div>
+    <input type="button" value="103" style="width:120px;height:40px;font-size:20px;">
+    <input type="button" value="104" style="width:120px;height:40px;font-size:20px;">
 </body>
 
 </html>
